MShades stage 1 stats, new plots

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -266,7 +266,7 @@ For the traditional scenario log data was recorded while each participant was en
 
 When looking at either scenario (the VR section of the traditional scenario \& both RW \& VR periods of the PR scenario) it is immediately obvious that participants looked to their sides \& turned their heads horizontally (yaw) far more than they looked above \& beneath themselves \& tilted their heads vertically (pitch). This relationship is shown in figures \ref{1_pitch_yaw_2up.png}, \ref{4_pitch_yaw_2up.png} \& \ref{6_pitch_yaw_2up.png}, which show pitch \& yaw plotted against time for both the traditional scenario \& the PR scenario, for participants 1, 4 \& 6 respectively.
 
-\begin{figure}[h]
+\begin{figure}[]
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/1_pitch_yaw_2up.png}
 	\caption{Pitch \& yaw against time for participant 1 in traditional \& PR scenarios.}
@@ -274,7 +274,7 @@ When looking at either scenario (the VR section of the traditional scenario \& b
 	\end{center}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[]
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/4_pitch_yaw_2up.png}
 	\caption{Pitch \& yaw against time for participant 4 in traditional \& PR scenarios.}
@@ -282,7 +282,7 @@ When looking at either scenario (the VR section of the traditional scenario \& b
 	\end{center}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[]
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/6_pitch_yaw_2up.png}
 	\caption{Pitch \& yaw against time for participant 6 in traditional \& PR scenarios.}
