Stage 1 eval, talking about log data.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -213,7 +213,7 @@ A total of 6 participants completed the stage 1 investigation;
 As expected, the PR scenario scored lower on SUS than the traditional scenario (see figure \ref{sus.png}), but not drastically so.
 
 \TwoFig{1/sus.png}{SUS results.}{sus.png}
-       {1/post_task_questionnaire_boxplot.png}{12-item questionnaire results.}{post_task_questionnaire_boxplot.png}
+       {1/post_task_questionnaire_boxplot.png}{Likert-type questionnaire results.}{post_task_questionnaire_boxplot.png}
 
 %=========================================================================================================
 
@@ -260,11 +260,11 @@ With regards to movement in the PR scenario, the accuracy \& especially the lag 
 
 \subsection{Log Data}
 
-For the traditional scenario log data was recorded while each participant was engaging with the VR chapel, in a seated position \& using the Xbox controller to navigate the VR environment. For the PR scenario log data was recorded throughout the whole scenario, such that data are available for both the periods in which participants were observing the RW chapel via the DK1 \& cameras in addition to the periods in which participants were observing the VR chapel. As such, several comparisons can be made between these data. Within the PR scenario, comparisons can be made between the periods that participants were observing RW \& the periods that participants were observing VR. Between the traditional scenario \& the PR scenario, comparisons can be made between the VR section of the traditional scenario \& the periods that participants were observing VR in the PR scenario. Log data was not captured for participant 2 \& was not captured for the traditional scenario for participant 5.
+For the traditional scenario log data were recorded while each participant was engaging with the VR chapel, in a seated position \& using the Xbox controller to navigate the VR environment. For the PR scenario log data were recorded throughout the whole scenario, such that data are available for both the periods in which participants were observing the RW chapel via the DK1 \& cameras in addition to the periods in which participants were observing the VR chapel. As such, several comparisons can be made between these data. Within the PR scenario, comparisons can be made between the periods that participants were observing RW \& the periods that participants were observing VR. Between the traditional scenario \& the PR scenario, comparisons can be made between the VR section of the traditional scenario \& the periods that participants were observing VR in the PR scenario. Log data were not captured for participant 2, nor were they captured for the traditional scenario for participant 5.
 
-When looking at either scenario (the VR section of the traditional scenario \& both RW \& VR periods of the PR scenario) it is immediately obvious that participants looked to their sides \& turned their heads horizontally (yaw) far more than they looked above \& beneath themselves by tilting their heads vertically (pitch). This relationship is shown in figures \ref{1_pitch_yaw_2up.png}, \ref{4_pitch_yaw_2up.png} \& \ref{6_pitch_yaw_2up.png}, which show pitch \& yaw plotted against time for both the traditional scenario \& the PR scenario, for participants 1, 4 \& 6 respectively. With the traditional scenario on the left of each pair of plots \& the PR scenario on the right, the displacement of the blue line representing yaw is substantially greater in both than the displacement of the red line representing yaw.
+When looking at either scenario's data (the VR section of the traditional scenario \& both RW \& VR periods of the PR scenario) it is immediately evident that participants looked to their sides \& turned their heads horizontally (yaw) far more than they looked above \& beneath themselves by tilting their heads vertically (pitch). This relationship is shown in figures \ref{1_pitch_yaw_2up.png}, \ref{4_pitch_yaw_2up.png} \& \ref{6_pitch_yaw_2up.png}, which show pitch \& yaw plotted against time for both the traditional scenario \& the PR scenario, for participants 1, 4 \& 6 respectively. With the traditional scenario on the left of each pair of plots \& the PR scenario on the right, the displacement of the blue line representing yaw is substantially greater in both than the displacement of the red line representing yaw.
 
-\begin{figure}[]
+\begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/1_pitch_yaw_2up.png}
 	\caption{Pitch \& yaw against time for participant 1 in traditional \& PR scenarios.}
@@ -272,7 +272,7 @@ When looking at either scenario (the VR section of the traditional scenario \& b
 	\end{center}
 \end{figure}
 
-\begin{figure}[]
+\begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/4_pitch_yaw_2up.png}
 	\caption{Pitch \& yaw against time for participant 4 in traditional \& PR scenarios.}
@@ -280,7 +280,7 @@ When looking at either scenario (the VR section of the traditional scenario \& b
 	\end{center}
 \end{figure}
 
-\begin{figure}[]
+\begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/6_pitch_yaw_2up.png}
 	\caption{Pitch \& yaw against time for participant 6 in traditional \& PR scenarios.}
@@ -288,7 +288,7 @@ When looking at either scenario (the VR section of the traditional scenario \& b
 	\end{center}
 \end{figure}
 
-This relationship that is easily visible in the plots is also evident when calculating the standard deviation in pitch \& yaw across both scenarios, shown by table \ref{sdpitchyawtrad} for the traditional scenario \& table \ref{sdpitchyawpr} for the PR scenario. For every participant for which the data are available, the standard deviation in yaw is substantially higher than that in pitch. This relationship can largely be explained by the simple fact that there is more to observe in the chapel(s) at ground level than above eye level or upon the ground, however with the marked difference in the appearance of the chapel roof (stone in the VR reconstruction, wood in the RW chapel today) a smaller difference between pitch \& yaw variance might have been expected.
+This relationship is also evident when calculating the standard deviation in pitch \& yaw across both scenarios, shown by table \ref{sdpitchyawtrad} for the traditional scenario \& table \ref{sdpitchyawpr} for the PR scenario. For every participant for which the data are available, the standard deviation in yaw is substantially higher than that in pitch. This relationship can largely be explained by the simple fact that there is more to observe in the chapel(s) at ground level than above eye level or upon the ground, however with the marked difference in the appearance of the chapel roof (stone in the VR reconstruction, wood in the RW chapel today) a smaller difference between pitch \& yaw variance might have been expected for both scenarios.
 
 \begin{table}
 \begin{center}
@@ -355,14 +355,14 @@ This relationship that is easily visible in the plots is also evident when calcu
 
 \hline
 \end{tabular}
-\caption{Standard deviation in pitch \& yaw for PR scenario.}
+\caption{Standard deviation in pitch \& yaw for PR scenario (both RW \& VR periods).}
 \label{sdpitchyawpr}
 \end{center}
 \end{minipage}
 \end{center}
 \end{table}
 
-When comparing pitch \& yaw data between the RW \& VR periods within the PR scenario, it is immediately noticeable that for some participants there was substantially more head movement while they were perceiving VR stimuli than while they were perceiving RW stimuli. This is particularly evident when plotting these pitch \& yaw data against time with the RW/VR visuals indicated. Figure \ref{1_pitch_yaw.png} shows the pitch \& yaw data for participant 1 during the PR scenario, who prominently displayed this tendency toward greater head movement while viewing VR than RW. The coloured background of the plot indicates which environment the participant was perceiving; blue for RW \& green for VR. There is an immediate correlation to be seen between the most pronounced changes in yaw (red line) \& the periods that the participant was observing VR stimuli (green background).
+When comparing pitch \& yaw data between the RW \& VR periods within the PR scenario, it is notable that for some participants there was substantially more head movement while they were perceiving VR stimuli than while they were perceiving RW stimuli. This is particularly evident when plotting these pitch \& yaw data against time with the RW/VR visuals indicated. Figure \ref{1_pitch_yaw.png} shows the pitch \& yaw data for participant 1 during the PR scenario, who prominently displayed this tendency toward greater head movement while viewing VR than RW. The coloured background of the plot indicates which environment the participant was perceiving at that time index; blue for RW \& green for VR. There is evident correlation to be seen between the most pronounced changes in yaw (red line) \& the periods that the participant was observing VR stimuli (green background).
 
 \begin{figure}[h]
 	\begin{center}
@@ -372,7 +372,7 @@ When comparing pitch \& yaw data between the RW \& VR periods within the PR scen
 	\end{center}
 \end{figure}
 
-As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more prevalent in the data from participant 3, while the data from participant 5 in figure \ref{5_pitch_yaw.png} still shows the relationship but to a lesser extent.
+As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more prevalent in the data from participant 3, while the data from participant 5 in figure \ref{5_pitch_yaw.png} still show the relationship but to a lesser extent.
 
 \begin{figure}[h]
 	\begin{center}
@@ -390,37 +390,7 @@ As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more pr
 	\end{center}
 \end{figure}
 
-Calculating the mean standard deviation in yaw for both RW \& VR periods, weighted by the duration of the periods, shows this relationship more scientifically. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is substantially higher than while perceiving RW stimuli for participant 1 (39.887\textdegree compared to 25.545\textdegree) \& for participant 3 (60.636\textdegree compared to 11.702\textdegree). The values are close for participant 5, due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the mean standard deviation from 150 seconds onwards to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli.
-
-Furthermore, comparing yaw from the VR periods of the PR scenario (table \ref{sdpitchyawpr}) against yaw from the traditional scenario (table \ref{sdpitchyawtrad}) it can be seen that in most cases there is a noticeably less yaw change in the VR periods of the PR scenario than in the traditional scenario, leading to the conclusion that participants felt more comfortable to perform larger head movements when seated than when walking with the DK1. Observations of participants while they performed the traditional scenario supports this with several participants frequently twisting their heads right around to look behind them, which while walking in the PR scenario they tended to achieve by turning their whole body to begin walking in the return direction.
-
-%=====================
-
-Comparing between VR section of traditional scenario \& VR periods of PR scenario
-
-Smaller difference between yaw \& pitch for VR periods of PR scenario than for VR segment of traditional scenario
-
-Yaw change less in VR periods of PR scenario than in VR segment of traditional scenario
-
-	Overall head movement in PR scenario VR periods lower than in VR segment of traditional scenario
-
-%=====================
-
-
-PR scenario against VR section of traditional scenario
-PR scenario against VR \& RW section of traditional scenario
-
-More yaw than pitch is true for all participants, even those that displayed a less pronounced difference in amount of movement between VR \& RW of PR scenario.
-
-%=====================
-
-Mean time spent in each environment for PR scenario varied greatly
-
-%=====================
-
-\textbf{***MOVEMENT} - you know, less head movement when position moving?
-
-
+Calculating the mean standard deviation in yaw for both RW \& VR periods, weighted by the duration of the periods, shows this relationship more accurately. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is substantially higher than while perceiving RW stimuli for participant 1 (39.887\textdegree\ compared to 25.545\textdegree) \& for participant 3 (60.636\textdegree\ compared to 11.702\textdegree). The values are close for participant 5, due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the mean standard deviation from 150 seconds onwards to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli, which is more in fitting with the impressions drawn from studying figure \ref{5_pitch_yaw.png}. The exception to this observation is participant 4, however this participant displayed very restricted head movement throughout both scenarios when compared to the other participants.
 
 \textbf{Weighted mean standard deviation in pitch \& yaw for RW \& VR periods of PR scenario.}
 
@@ -495,6 +465,42 @@ Mean time spent in each environment for PR scenario varied greatly
 \end{minipage}
 \end{center}
 \end{table}
+
+Furthermore, comparing yaw from the VR periods of the PR scenario (table \ref{sdyawtab}) against yaw from the traditional scenario (table \ref{sdpitchyawtrad}) it can be seen that in most cases there is a noticeably less yaw change in the VR periods of the PR scenario than in the traditional scenario, leading to the conclusion that participants felt more comfortable to perform larger head movements when seated with the DK1 than when standing/walking with the DK1. Observations of participants while they performed the traditional scenario supports this with several participants twisting their heads right around to look behind them without changing their direction of their virtual `movement', while when walking in the PR scenario they tended to largely look ahead \& perform larger orientation changes by instead turning their whole body to begin walking in the return direction.
+
+Further comparing head movements between the VR section of the traditional scenario \& the VR periods of the PR scenario, the difference between the magnitude of pitch \& yaw is greater in the VR section of the traditional scenario than in the VR periods of the PR scenario. Comparing these values from tables \ref{sdpitchyawtrad}, \ref{sdpitchyawpr} \& \ref{sdpitchyawtrad} this difference exhibits as smaller variance in yaw \& roughly unchanged (only slight increased) variance in pitch for the VR periods of the PR scenario, further indicating that participants were more comfortable to look around themselves more freely in the traditional scenario than the PR scenario, leading to less overall head movement in the PR scenario than the traditional scenario.
+
+%=====================
+
+When studying plots of head pitch \& yaw against time aligned with plots of distance moved against time, some participants display an aversion to large head movements while moving. Considering participant 1, they seem to have been quite comfortable looking around a lot even while moving in the traditional scenario, while in the PR scenario their large head movements are close to the periods in which their position was not changing as much\footnote{When looking at these plots it is important to appreciate that lag in the IndoorAtlas data results in a small lateral offset between the position data \& the head orientation data, as the latter is unaffected by the lag in the correct reporting \& `settling' of the former.}.
+
+When looking at the same data plotted for participant 3, it seems that they were reluctant to perform large head movements while moving in both scenarios, rather than just the PR scenario.
+
+This difference can be explained by something as simple as participant 1 having more experience with video games that present the user with a `first person' perspective in which movement \& looking direction are controlled independently. For somebody familiar with this style of control, it is second nature to use one control to change their position whilst simultaneously using another control to change the direction in which they are looking, however for those unfamiliar or inexperienced with such scenarios it is common to observe alternation between movement \& looking, something that the OVW group has observed in people interacting with our content at various demonstrations using keyboard \& mouse, Xbox controller \& other control methodologies. For first person shooter (FPS) video games, this is commonly achieved by using keyboard buttons to control movement while using a mouse to control looking direction. With the traditional scenario, the Xbox controller provides control over movement while the head tracker in the DK1 provides control over looking direction by tracking head orientation.
+
+
+
+
+
+***replot 1 \& 3 4-ups with larger text \& new labels
+
+
+
+
+
+
+
+%=====================
+
+Mean time spent in each environment for PR scenario varied greatly
+
+
+
+
+
+
+
+
 
 
 
