Stage 1 eval, talking about log data.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -156,7 +156,7 @@ The comparison of the traditional scenario against the PR scenario included coll
 
 %=========================================================================================================
 
-\section{Hypotheses}
+\subsection{Hypotheses}
 \label{stage1hypotheses}
 This first stage of evaluation was designed to ascertain whether applying mobile PR to a cultural heritage scenario results in an improvement in participant engagement with \& understanding of the relationships between the RW \& VR environments, compared to a traditional virtual heritage scenario, by addressing the problems of spatial \& temporal separation inherent with the traditional scenario by imparting upon the participant the ability to transition at will between equivalent vantage points within the RW \& VR environments.
 
@@ -367,7 +367,7 @@ When comparing pitch \& yaw data between the RW \& VR periods within the PR scen
 \begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/1_pitch_yaw.png}
-	\caption{Pitch \& yaw against time for participant 1 in PR scenario.}
+	\caption{Pitch \& yaw against time for participant 1 in PR scenario, showing RW/VR periods.}
 	\label{1_pitch_yaw.png}
 	\end{center}
 \end{figure}
@@ -377,7 +377,7 @@ As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more pr
 \begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/3_pitch_yaw.png}
-	\caption{Pitch \& yaw against time for participant 3 in PR scenario.}
+	\caption{Pitch \& yaw against time for participant 3 in PR scenario, showing RW/VR periods.}
 	\label{3_pitch_yaw.png}
 	\end{center}
 \end{figure}
@@ -385,14 +385,12 @@ As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more pr
 \begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/5_pitch_yaw.png}
-	\caption{Pitch \& yaw against time for participant 5 in PR scenario.}
+	\caption{Pitch \& yaw against time for participant 5 in PR scenario, showing RW/VR periods.}
 	\label{5_pitch_yaw.png}
 	\end{center}
 \end{figure}
 
 Calculating the mean standard deviation in yaw for both RW \& VR periods, weighted by the duration of the periods, shows this relationship more accurately. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is substantially higher than while perceiving RW stimuli for participant 1 (39.887\textdegree\ compared to 25.545\textdegree) \& for participant 3 (60.636\textdegree\ compared to 11.702\textdegree). The values are close for participant 5, due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the mean standard deviation from 150 seconds onwards to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli, which is more in fitting with the impressions drawn from studying figure \ref{5_pitch_yaw.png}. The exception to this observation is participant 4, however this participant displayed very restricted head movement throughout both scenarios when compared to the other participants.
-
-\textbf{Weighted mean standard deviation in pitch \& yaw for RW \& VR periods of PR scenario.}
 
 \begin{table}
 \begin{center}
@@ -472,176 +470,31 @@ Further comparing head movements between the VR section of the traditional scena
 
 %=====================
 
-When studying plots of head pitch \& yaw against time aligned with plots of distance moved against time, some participants display an aversion to large head movements while moving. Considering participant 1, they seem to have been quite comfortable looking around a lot even while moving in the traditional scenario, while in the PR scenario their large head movements are close to the periods in which their position was not changing as much\footnote{When looking at these plots it is important to appreciate that lag in the IndoorAtlas data results in a small lateral offset between the position data \& the head orientation data, as the latter is unaffected by the lag in the correct reporting \& `settling' of the former.}.
+When studying plots of head pitch \& yaw against time aligned with plots of distance moved against time, some participants display an aversion to large head movements while moving. Considering participant 1 (figure \ref{1_4up.png}), they seem to have been quite comfortable looking around a lot even while moving in the traditional scenario, while in the PR scenario their large head movements are close to the periods in which their position was not changing as much\footnote{When looking at these plots it is important to appreciate that lag in the IndoorAtlas data results in a small lateral offset between the position data \& the head orientation data, as the latter is unaffected by the lag in the correct reporting \& `settling' of the former.}. When looking at the same data plotted for participant 3 however (figure \ref{3_4up.png}), it seems that they were reluctant to perform large head movements while moving in both scenarios, rather than just the PR scenario.
 
-When looking at the same data plotted for participant 3, it seems that they were reluctant to perform large head movements while moving in both scenarios, rather than just the PR scenario.
-
-This difference can be explained by something as simple as participant 1 having more experience with video games that present the user with a `first person' perspective in which movement \& looking direction are controlled independently. For somebody familiar with this style of control, it is second nature to use one control to change their position whilst simultaneously using another control to change the direction in which they are looking, however for those unfamiliar or inexperienced with such scenarios it is common to observe alternation between movement \& looking, something that the OVW group has observed in people interacting with our content at various demonstrations using keyboard \& mouse, Xbox controller \& other control methodologies. For first person shooter (FPS) video games, this is commonly achieved by using keyboard buttons to control movement while using a mouse to control looking direction. With the traditional scenario, the Xbox controller provides control over movement while the head tracker in the DK1 provides control over looking direction by tracking head orientation.
-
-
-
-
-
-***replot 1 \& 3 4-ups with larger text \& new labels
-
-
-
-
-
-
-
-%=====================
-
-Mean time spent in each environment for PR scenario varied greatly
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-%=========================================================================================================
-
-%\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/11_1-4_3up.png}}
-
-\clearpage
-
-\subsection{Participant 1}
-
-\begin{figure}[h]
+\begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/1_4up.png}
-	\caption{Some images, yah.}
+	\caption{Pitch \& yaw against time, aligned with distance moved against time, for participant 1 in both scenarios.}
+	\label{1_4up.png}
 	\end{center}
 \end{figure}
 
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/1_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsection{Participant 3}
-
-\begin{figure}[h]
+\begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/3_4up.png}
-	\caption{Some images, yah.}
+	\caption{Pitch \& yaw against time, aligned with distance moved against time, for participant 3 in both scenarios.}
+	\label{3_4up.png}
 	\end{center}
 \end{figure}
 
-\clearpage
+Reluctance to changing head orientation when moving in the traditional scenario can be explained by something as simple as participant 1 having more experience with video games that present the user with a `first person' perspective in which movement \& looking direction are controlled independently. For somebody familiar with this style of control, it is second nature to use one control to change their position whilst simultaneously using another control to change the direction in which they are looking, however for those unfamiliar or inexperienced with such scenarios it is common to observe alternation between movement \& looking, something that the OVW group has observed in people interacting with our content at various demonstrations using keyboard \& mouse, Xbox controller \& other control methodologies. For first person shooter (FPS) video games, this is commonly achieved by using keyboard buttons to control movement while using a mouse to control looking direction. With the traditional scenario, the Xbox controller provides control over movement while the head tracker in the DK1 provides control over looking direction by tracking head orientation.
 
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/3_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
+Reluctance to changing head orientation when moving in the PR scenario is most logically explained by participants feeling as though with the reduced visual acuity of their RW environment \& the discrepancy in position \& environmental objects of their VR environment that they needed to pay more conscious attention to their walking.
 
 %=========================================================================================================
 
-\clearpage
-
-\subsection{Participant 4}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/4_4up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/4_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\subsection{Participant 5}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/5_4up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/5_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\subsection{Participant 6}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/6_4up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/6_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+\section{Stage 1 Conclusions}
 
 
 
@@ -655,7 +508,7 @@ Mean time spent in each environment for PR scenario varied greatly
 
 \clearpage
 
-\section{Stage 2}
+\section{Stage 2 - Informing PR Implementation}
 
 \subsection{Evaluation}
 
